syntax = "proto3";

import "common.proto";
package FusionProto;

message FusDetection {
  double longitudinal_distance = 1;
  double lateral_distance = 2;
  double vertical_distance = 3;
  double azimuth = 4;
  double elevation_angle = 5;
  bool elevation_validy = 6;
  double radial_rel_acceleration = 7;
  double radial_rel_velocity = 8;
  double radial_abs_acceleration = 9;
  double radial_abs_velocity = 10;
  double radius = 11;
  double rcs = 12;
  double snr = 13;
  int32 obj_id = 14;
  .CommonProto.PointMotionState motion_status = 15;
}

message FusDetections {
  double time_stamp = 1;
  repeated .FusionProto.FusDetection points = 2;
  repeated .CommonProto.SensorParameters sensors_parameters = 3;
  repeated .CommonProto.FrameClue input_info = 4;
  int32 frame_index = 5;
}

